@@ -192,18 +192,18 @@ Unter dem Men&uuml;punkt "Seminarix" finden Sie im Untermen&uuml; "Allgemein" di
   <dd>Das KDE-Projekt hat ein sehr breit angelegtes Officepaket
 entwickelt, das eine Schreibmaschine, eine Tabellenkalkulation,
 Bildbearbeitung, Formeleditor, Arbeit mit skalierbaren Vektorgrafiken,
-Diagramme und Folienpr&auml;sentation sowie einen Reportgenerator enth&auml;lt.</dd>
+Diagramme und Folienpr&auml;sentation, ein Datenbankmanagmentprogramm sowie einen Reportgenerator enth&auml;lt.</dd>
 
   <dd>Diese Anwendungen sind f&uuml;r den &uuml;blichen Ausbildungs- und
 Unterrichtsalltag mehr als ausreichend.</dd>
 
   <dd>KOffice ist eine&nbsp;funktionsreiche B&uuml;rol&ouml;sung, die&nbsp;in den KDE Desktop integriert ist.</dd>
 
-  <dd>Sie unterst&uuml;tzt das OASIS Dateiformat, welches auch das aktuelle OpenOffice nutzt.</dd>
+  <dd>Sie unterst&uuml;tzt das OASIS OpenDocument-Dateiformat, welches ein offener Standard für Office-Anwendungen ist. Auch das aktuelle OpenOffice nutzt dieses Dateiformat standardmäßig.</dd>
  
   <dd>Weiter werden eine grosse Auswahl an Filtern geboten, um mit
 anderen popul&auml;ren (und propriet&auml;ren)
-B&uuml;roprogrammen wie z.B. Microsoft Office Produkte austauschen zu k&ouml;nnen.</dd>
+B&uuml;roprogrammen wie z.B. Microsoft Office Produkte austauschen zu k&ouml;nnen. (Hinweis: Das Abspeichern und &Ouml;ffnen von propriet&auml;ren Microsoft Office Dateienformaten verl&auml;uft mit KOffice nicht immer ganz fehlerfrei. Die Dateien lassen sich jedoch meist mit wenigen Handgriffen nachkorrigieren.) </dd>
 
   <dd>Wem weitere und gr&ouml;&szlig;ere und damit noch funktionsreichere
 Anwendungen fehlen, der greift zum Riesen unter den freien
