@@ -188,7 +188,7 @@ Summenformeln bestimmen und Molmassen berechnen lassen kann.)</dd>
 
 <dl>
 
-  <dt><a href="http://ruby.chemie.uni-freiburg.de/%7Emartin/chemtool/chemtool.html" target="_blank">Chemtool</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" target="_blank" href="http://www.linux-magazin.de/Artikel/ausgabe/1998/07/Chemie/chemie.html">Info Chemtool</a></dt>
+  <dt><a href="http://ruby.chemie.uni-freiburg.de/%7Emartin/chemtool/chemtool.html" target="_blank">Chemtool</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a class="info" target="_blank" href="http://ruby.chemie.uni-freiburg.de/~martin/chemtool/usage.html">Info Chemtool</a></dt>
 
   <dd>&nbsp;</dd>
 
