@@ -5,8 +5,9 @@ seminarix-handbook (0.1.4) UNRELEASED; urgency=low
 
   [ Horst Tritremmel ]
   * seminarix-intern.html updated
+  * chemie.html allgemein.html updated
 
- -- Horst Tritremmel <hjt@sidux.com>  Tue, 27 Nov 2007 22:23:43 +0100
+ -- Horst Tritremmel <hjt@sidux.com>  Wed, 28 Nov 2007 11:08:19 +0100
 
 seminarix-handbook (0.1.3) unstable; urgency=low
 
